[package]
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
name = "polyp-server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
polyp = "0.5.0"
portpicker = "0.1"
serde_json = "1.0.57"
tungstenite = "0.11.1"
url = "2.1.1"
